usage postgres and updated packages

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# URL to connect to the MongoDB cluster
-MONGODB_PATH=mongodb+srv://<...>/
+# PostgreSQL connection string
+POSTGRES_URI=postgresql://username:password@localhost:5432/
 
 # The port number where the server will listen for requests
 PORT=5001
