--- a/package.json
+++ b/package.json
@@ -15,30 +15,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "2.8.5",
-    "dotenv": "17.2.2",
-    "express": "5.1.0",
-    "mongoose": "8.18.1",
-    "nodemon": "^3.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "cors": "2.8.6",
+    "dotenv": "17.2.3",
+    "express": "5.2.1",
+    "nodemon": "^3.1.011",
+    "pg": "^8.17.2",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "sequelize": "^6.37.7",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "2.8.19",
-    "@types/express": "5.0.3",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.2",
-    "@types/react": "^19.0.10",
-    "@typescript-eslint/eslint-plugin": "8.43.0",
-    "@typescript-eslint/parser": "8.43.0",
+    "@types/express": "5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "25.0.10",
+    "@types/react": "19.2.9",
+    "@typescript-eslint/eslint-plugin": "8.53.1",
+    "@typescript-eslint/parser": "8.53.1",
     "eslint": "9.35.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "jsonwebtoken": "^9.0.2",
-    "typescript": "5.9.2",
-    "typescript-eslint": "^8.43.0"
+    "eslint-plugin-prettier": "^5.5.5",
+    "jsonwebtoken": "^9.0.3",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.53.1"
   }
 }
